test_regress/t/t_assert_always_unsup.out
%Error: t/t_assert_always_unsup.v:24:18: syntax error, unexpected ']', expecting ':'
   24 |     eventually [2] a;
      |                  ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Cannot continue
        ... This fatal error may be caused by the earlier error(s); resolve those first.
